[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/inventory.gd" type="Script" id=1]
[ext_resource path="res://scenes/inventory/ItemDatabase.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/inventory/item_slot.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/inventory/item_select.tscn" type="PackedScene" id=4]

[node name="inventory" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="ItemDatabase" parent="." instance=ExtResource( 2 )]

[node name="inventory_slots" type="Control" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="item_slot" parent="inventory_slots" instance=ExtResource( 3 )]

slot_id = 0

[node name="item_slot1" parent="inventory_slots" instance=ExtResource( 3 )]

margin_left = 40.0
margin_right = 52.0

[node name="item_slot2" parent="inventory_slots" instance=ExtResource( 3 )]

margin_left = 80.0
margin_right = 92.0
slot_id = 2

[node name="item_slot3" parent="inventory_slots" instance=ExtResource( 3 )]

margin_left = 120.0
margin_right = 132.0
slot_id = 3

[node name="item_slot4" parent="inventory_slots" instance=ExtResource( 3 )]

margin_left = 160.0
margin_right = 172.0
slot_id = 4

[node name="item_slot5" parent="inventory_slots" instance=ExtResource( 3 )]

margin_left = 200.0
margin_right = 212.0
slot_id = 5

[node name="item_slot6" parent="inventory_slots" instance=ExtResource( 3 )]

margin_left = 240.0
margin_right = 252.0
slot_id = 6

[node name="item_slot7" parent="inventory_slots" instance=ExtResource( 3 )]

margin_left = 280.0
margin_right = 292.0
slot_id = 7

[node name="item_select" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false


